cluster/deployments/vault/vault-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: vault
  labels:
    name: vault
