cluster/deployments/vault/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  labels:
spec:
  ingressClassName: nginx
  rules:
  - host: vault.myk8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: vault
            port:
              number: 8200
